[gd_scene load_steps=3 format=3 uid="uid://b1vbw7o5vm5nt"]

[ext_resource type="Script" path="res://states/pick_pos_choose_state/pick_pos_choose_ui.gd" id="1_dc30e"]
[ext_resource type="FontFile" uid="uid://d32tns028vqyc" path="res://asserts/font/minecraft.ttf" id="2_pycqb"]

[node name="PickPosChooseUi" type="CanvasLayer"]
script = ExtResource("1_dc30e")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LabelQue" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
text = "选择哪个方向?"
horizontal_alignment = 1

[node name="Up" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="LabelKey" type="Label" parent="MarginContainer/VBoxContainer/Up"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
horizontal_alignment = 1

[node name="LabelAction" type="Label" parent="MarginContainer/VBoxContainer/Up"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
text = "上"
horizontal_alignment = 1

[node name="Down" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="LabelKey" type="Label" parent="MarginContainer/VBoxContainer/Down"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
horizontal_alignment = 1

[node name="LabelAction" type="Label" parent="MarginContainer/VBoxContainer/Down"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
text = "下"
horizontal_alignment = 1

[node name="Right" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="LabelKey" type="Label" parent="MarginContainer/VBoxContainer/Right"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
horizontal_alignment = 1

[node name="LabelAction" type="Label" parent="MarginContainer/VBoxContainer/Right"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
text = "右"
horizontal_alignment = 1

[node name="Left" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="LabelKey" type="Label" parent="MarginContainer/VBoxContainer/Left"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
horizontal_alignment = 1

[node name="LabelAction" type="Label" parent="MarginContainer/VBoxContainer/Left"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
text = "左"
horizontal_alignment = 1

[node name="UpRight" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="LabelKey" type="Label" parent="MarginContainer/VBoxContainer/UpRight"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
horizontal_alignment = 1

[node name="LabelAction" type="Label" parent="MarginContainer/VBoxContainer/UpRight"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
text = "右上"
horizontal_alignment = 1

[node name="UpLeft" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="LabelKey" type="Label" parent="MarginContainer/VBoxContainer/UpLeft"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
horizontal_alignment = 1

[node name="LabelAction" type="Label" parent="MarginContainer/VBoxContainer/UpLeft"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
text = "左上"
horizontal_alignment = 1

[node name="DownRight" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="LabelKey" type="Label" parent="MarginContainer/VBoxContainer/DownRight"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
horizontal_alignment = 1

[node name="LabelAction" type="Label" parent="MarginContainer/VBoxContainer/DownRight"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
text = "右下"
horizontal_alignment = 1

[node name="DownLeft" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="LabelKey" type="Label" parent="MarginContainer/VBoxContainer/DownLeft"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
horizontal_alignment = 1

[node name="LabelAction" type="Label" parent="MarginContainer/VBoxContainer/DownLeft"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pycqb")
text = "左下"
horizontal_alignment = 1
